--- a/W11Service/W11Service.csproj
+++ b/W11Service/W11Service.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileDataEntity.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="MyService.cs">
       <SubType>Component</SubType>
