Include game engine in the service project.

--- a/W11Service/A06Service.csproj
+++ b/W11Service/A06Service.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameEngine.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="GameService.cs">
       <SubType>Component</SubType>
