--- a/W11Service/App.config
+++ b/W11Service/App.config
@@ -5,5 +5,7 @@
     </startup>
 	<appSettings>
 		<add key="Directory" value="C:\temp" />
+		<add key="MinNumber" value="1" />
+		<add key="MaxNumber" value="10" />
 	</appSettings>
 </configuration>
