--- a/W11Service/App.config
+++ b/W11Service/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 	<appSettings>
-		<add key="Directory" value="C:\temp" />
+		<add key="Directory" value="C:\temp\GameServiceLogFile.txt" />
 		<add key="MinNumber" value="1" />
 		<add key="MaxNumber" value="10" />
 	</appSettings>
